Bug 258883 - Crashed after deleting category which required transfer of transaction to another category
Summary: Crashed after deleting category which required transfer of transaction to ano...
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.5
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
: 258575 266741 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-12-05 10:32 UTC by Derek
Modified: 2012-10-11 21:14 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (8.38 KB, text/plain)
2011-01-22 12:49 UTC, Steven Booth
Details
New crash information added by DrKonqi (10.15 KB, text/plain)
2011-01-28 18:12 UTC, Remco
Details
New crash information added by DrKonqi (9.23 KB, text/plain)
2011-04-16 21:38 UTC, Michael T. Garrison Stuber
Details
New crash information added by DrKonqi (10.98 KB, text/plain)
2012-10-11 21:14 UTC, Luca
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Derek 2010-12-05 10:32:22 UTC
Application: kmymoney (4.5.0)
KDE Platform Version: 4.5.1 (KDE 4.5.1)
Qt Version: 4.7.0
Operating System: Linux 2.6.35-23-generic i686
Distribution: Ubuntu 10.10

-- Information about the crash:
- What I was doing when the application crashed: clicking on 'Ledger' button once the transactions in 'Telephone' category had been transferred to 'Phone' category (say 100 or so transactions).

-- Backtrace:
Application: KMyMoney (kmymoney), signal: Aborted
[Current thread is 1 (Thread 0xb78cc710 (LWP 2911))]

Thread 2 (Thread 0xb7675b70 (LWP 2912)):
#0  0x00303416 in __kernel_vsyscall ()
#1  0x013b1df6 in poll () from /lib/libc.so.6
#2  0x06489a1b in g_poll () from /lib/libglib-2.0.so.0
#3  0x0647c43c in ?? () from /lib/libglib-2.0.so.0
#4  0x0647cba7 in g_main_loop_run () from /lib/libglib-2.0.so.0
#5  0x01cc06b4 in ?? () from /usr/lib/libgio-2.0.so.0
#6  0x064a348f in ?? () from /lib/libglib-2.0.so.0
#7  0x002ddcc9 in start_thread () from /lib/libpthread.so.0
#8  0x013c06be in clone () from /lib/libc.so.6

Thread 1 (Thread 0xb78cc710 (LWP 2911)):
[KCrash Handler]
#7  0x00303416 in __kernel_vsyscall ()
#8  0x0131a941 in raise () from /lib/libc.so.6
#9  0x0131de42 in abort () from /lib/libc.so.6
#10 0x0228f055 in __gnu_cxx::__verbose_terminate_handler() () from /usr/lib/libstdc++.so.6
#11 0x0228cf35 in ?? () from /usr/lib/libstdc++.so.6
#12 0x0228cf72 in std::terminate() () from /usr/lib/libstdc++.so.6
#13 0x0228d14b in __cxa_rethrow () from /usr/lib/libstdc++.so.6
#14 0x07264b35 in QMetaObject::activate (sender=0x9e0ba48, m=0x86c4358, local_signal_index=0, argv=<value optimized out>) at kernel/qobject.cpp:3290
#15 0x0816a303 in KGlobalLedgerView::accountSelected (this=0x9e0ba48, _t1=...) at /build/buildd/kmymoney-4.5/obj-i686-linux-gnu/kmymoney/views/kgloballedgerview.moc:244
#16 0x08171e95 in KGlobalLedgerView::loadView (this=0x9e0ba48) at /build/buildd/kmymoney-4.5/kmymoney/views/kgloballedgerview.cpp:343
#17 0x0817a738 in KGlobalLedgerView::showEvent (this=0x9e0ba48, event=0xbfa78750) at /build/buildd/kmymoney-4.5/kmymoney/views/kgloballedgerview.cpp:1306
#18 0x04f98c72 in QWidget::event (this=0x9e0ba48, event=0xbfa78750) at kernel/qwidget.cpp:8394
#19 0x04f3afdc in QApplicationPrivate::notify_helper (this=0x9b73d90, receiver=0x9e0ba48, e=0xbfa78750) at kernel/qapplication.cpp:4396
#20 0x04f410e9 in QApplication::notify (this=0x9b73cb0, receiver=0x9e0ba48, e=0xbfa78750) at kernel/qapplication.cpp:4361
#21 0x0111168a in KApplication::notify(QObject*, QEvent*) () from /usr/lib/libkdeui.so.5
#22 0x0724bb3b in QCoreApplication::notifyInternal (this=0x9b73cb0, receiver=0x9e0ba48, event=0xbfa78750) at kernel/qcoreapplication.cpp:732
#23 0x04f9d655 in sendEvent (this=0x9ff02f0) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#24 QWidgetPrivate::show_helper (this=0x9ff02f0) at kernel/qwidget.cpp:7367
#25 0x04f9ee9b in QWidget::setVisible (this=0x9e0ba48, visible=true) at kernel/qwidget.cpp:7589
#26 0x04f809e2 in show (this=0x9e0d670, index=2) at ../../include/QtGui/../../src/gui/kernel/qwidget.h:487
#27 QStackedLayout::setCurrentIndex (this=0x9e0d670, index=2) at kernel/qstackedlayout.cpp:311
#28 0x04f80b6d in QStackedLayout::setCurrentWidget (this=0x9e0d670, widget=0x9e0ba48) at kernel/qstackedlayout.cpp:365
#29 0x05428b0c in QStackedWidget::setCurrentWidget (this=0x9e0d868, widget=0x9e0ba48) at widgets/qstackedwidget.cpp:250
#30 0x0115576b in ?? () from /usr/lib/libkdeui.so.5
#31 0x01155a07 in KPageView::qt_metacall(QMetaObject::Call, int, void**) () from /usr/lib/libkdeui.so.5
#32 0x01159dea in KPageWidget::qt_metacall(QMetaObject::Call, int, void**) () from /usr/lib/libkdeui.so.5
#33 0x080eaaca in KMyMoneyView::qt_metacall (this=0x9e0bb68, _c=QMetaObject::InvokeMetaMethod, _id=30, _a=0xbfa78aa4) at /build/buildd/kmymoney-4.5/obj-i686-linux-gnu/kmymoney/views/kmymoneyview.moc:103
#34 0x072518ca in QMetaObject::metacall (object=0x9e0bb68, cl=2911, idx=30, argv=0xbfa78aa4) at kernel/qmetaobject.cpp:237
#35 0x072646ad in QMetaObject::activate (sender=0x9dbd108, m=0x58c6a50, local_signal_index=0, argv=0x0) at kernel/qobject.cpp:3280
#36 0x05565369 in QItemSelectionModel::selectionChanged (this=0x9dbd108, _t1=..., _t2=...) at .moc/release-shared/moc_qitemselectionmodel.cpp:152
#37 0x055684b3 in QItemSelectionModel::emitSelectionChanged (this=0x9dbd108, newSelection=..., oldSelection=...) at itemviews/qitemselectionmodel.cpp:1581
#38 0x05569d44 in QItemSelectionModel::select (this=0x9dbd108, selection=..., command=...) at itemviews/qitemselectionmodel.cpp:1088
#39 0x01156412 in ?? () from /usr/lib/libkdeui.so.5
#40 0x0553095b in QListView::setSelection (this=0x9b7adb8, rect=..., command=...) at itemviews/qlistview.cpp:1385
#41 0x0550fa3b in QAbstractItemView::mousePressEvent (this=0x9b7adb8, event=0xbfa796c0) at itemviews/qabstractitemview.cpp:1665
#42 0x04f98dec in QWidget::event (this=0x9b7adb8, event=0xbfa796c0) at kernel/qwidget.cpp:8183
#43 0x053ba763 in QFrame::event (this=0x9b7adb8, e=0xbfa796c0) at widgets/qframe.cpp:557
#44 0x05457a82 in QAbstractScrollArea::viewportEvent (this=0xb5f, e=0x6) at widgets/qabstractscrollarea.cpp:1043
#45 0x055140f7 in QAbstractItemView::viewportEvent (this=0x9b7adb8, event=0xbfa796c0) at itemviews/qabstractitemview.cpp:1619
#46 0x0545a4d5 in viewportEvent (this=0xa227ff8, o=0xa22ac30, e=0xbfa796c0) at widgets/qabstractscrollarea_p.h:100
#47 QAbstractScrollAreaFilter::eventFilter (this=0xa227ff8, o=0xa22ac30, e=0xbfa796c0) at widgets/qabstractscrollarea_p.h:116
#48 0x0724b29a in QCoreApplicationPrivate::sendThroughObjectEventFilters (this=0x9b73d90, receiver=0xa22ac30, event=0xbfa796c0) at kernel/qcoreapplication.cpp:847
#49 0x04f3afb9 in QApplicationPrivate::notify_helper (this=0x9b73d90, receiver=0xa22ac30, e=0xbfa796c0) at kernel/qapplication.cpp:4392
#50 0x04f41c2e in QApplication::notify (this=0x9b73cb0, receiver=0xa22ac30, e=0xbfa796c0) at kernel/qapplication.cpp:3959
#51 0x0111168a in KApplication::notify(QObject*, QEvent*) () from /usr/lib/libkdeui.so.5
#52 0x0724bb3b in QCoreApplication::notifyInternal (this=0x9b73cb0, receiver=0xa22ac30, event=0xbfa796c0) at kernel/qcoreapplication.cpp:732
#53 0x04f40094 in sendEvent (receiver=0xa22ac30, event=0xbfa796c0, alienWidget=0xa22ac30, nativeWidget=0x9b7adb8, buttonDown=0x58d53c0, lastMouseReceiver=..., spontaneous=true) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#54 QApplicationPrivate::sendMouseEvent (receiver=0xa22ac30, event=0xbfa796c0, alienWidget=0xa22ac30, nativeWidget=0x9b7adb8, buttonDown=0x58d53c0, lastMouseReceiver=..., spontaneous=true) at kernel/qapplication.cpp:3058
#55 0x04fced10 in QETWidget::translateMouseEvent (this=0x9b7adb8, event=0xbfa79bdc) at kernel/qapplication_x11.cpp:4403
#56 0x04fce151 in QApplication::x11ProcessEvent (this=0x9b73cb0, event=0xbfa79bdc) at kernel/qapplication_x11.cpp:3414
#57 0x04ffd36a in x11EventSourceDispatch (s=0x9b76af8, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#58 0x06478855 in g_main_context_dispatch () from /lib/libglib-2.0.so.0
#59 0x0647c668 in ?? () from /lib/libglib-2.0.so.0
#60 0x0647c848 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#61 0x0727a565 in QEventDispatcherGlib::processEvents (this=0x9b59b78, flags=...) at kernel/qeventdispatcher_glib.cpp:415
#62 0x04ffcbe5 in QGuiEventDispatcherGlib::processEvents (this=0x9b59b78, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#63 0x0724a609 in QEventLoop::processEvents (this=0xbfa79ed4, flags=) at kernel/qeventloop.cpp:149
#64 0x0724aa8a in QEventLoop::exec (this=0xbfa79ed4, flags=...) at kernel/qeventloop.cpp:201
#65 0x0724f00f in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1009
#66 0x04f39e07 in QApplication::exec () at kernel/qapplication.cpp:3672
#67 0x08086107 in main (argc=2, argv=0xbfa7a364) at /build/buildd/kmymoney-4.5/kmymoney/main.cpp:260

Possible duplicates by query: bug 258575, bug 236413.

Reported using DrKonqi
Comment 1 Cristian Oneț 2010-12-05 12:56:22 UTC
*** Bug 258575 has been marked as a duplicate of this bug. ***
Comment 2 Steven Booth 2011-01-22 12:49:31 UTC
Created attachment 56315 [details]
New crash information added by DrKonqi

kmymoney (4.5.0) on KDE Platform 4.5.1 (KDE 4.5.1) using Qt 4.7.0

- What I was doing when the application crashed:  Just deleted a category and moved transactions to another one.  Crashed when I clicked on "ledgers" to get out of "categories"

- Unusual behavior I noticed: I tried to create a new category using menu item "categories" at the top of the page.  I tried twice to create this expenses category and both versions were put into income section.  I entered a transaction to see what would happen and tried to edit it from edit categories but nothing happened.  I opened categories from the side panel and created the new category in expenses and then deleted the two incorrect versions in income.  Even though one was not used it asked me for another category to allocate transactions to.  then it crashed when I clicked on ledgers in the side panel

-- Backtrace (Reduced):
#15 0x0816a303 in KGlobalLedgerView::accountSelected (this=0xa2a6678, _t1=...) at /build/buildd/kmymoney-4.5/obj-i686-linux-gnu/kmymoney/views/kgloballedgerview.moc:244
#16 0x08171e95 in KGlobalLedgerView::loadView (this=0xa2a6678) at /build/buildd/kmymoney-4.5/kmymoney/views/kgloballedgerview.cpp:343
#17 0x0817a738 in KGlobalLedgerView::showEvent (this=0xa2a6678, event=0xbff52f00) at /build/buildd/kmymoney-4.5/kmymoney/views/kgloballedgerview.cpp:1306
#18 0x0145bc72 in QWidget::event (this=0xa2a6678, event=0xbff52f00) at kernel/qwidget.cpp:8394
#19 0x013fdfdc in QApplicationPrivate::notify_helper (this=0x9e37d40, receiver=0xa2a6678, e=0xbff52f00) at kernel/qapplication.cpp:4396
Comment 3 Remco 2011-01-28 18:12:31 UTC
Created attachment 56582 [details]
New crash information added by DrKonqi

kmymoney (4.5.0) on KDE Platform 4.5.1 (KDE 4.5.1) using Qt 4.7.0

- What I was doing when the application crashed:
I moved from Microsoft Money. Imported everything with QIF. I am dutch, imported dutch categories. Application crashes when I move transactions from the old category to a new. Then when I click another category, do right click edit or double click open, the app crashes. This doesn't happen all the time. I migrated all my tansactions now from around 35 categories and the app crashed 5 times in the process.

-- Backtrace (Reduced):
#15 0x0816a303 in KGlobalLedgerView::accountSelected (this=0x9f25b68, _t1=...) at /build/buildd/kmymoney-4.5/obj-i686-linux-gnu/kmymoney/views/kgloballedgerview.moc:244
#16 0x08171e95 in KGlobalLedgerView::loadView (this=0x9f25b68) at /build/buildd/kmymoney-4.5/kmymoney/views/kgloballedgerview.cpp:343
#17 0x0817a738 in KGlobalLedgerView::showEvent (this=0x9f25b68, event=0xbfe916d0) at /build/buildd/kmymoney-4.5/kmymoney/views/kgloballedgerview.cpp:1306
#18 0xb5ccbc72 in QWidget::event (this=0x9f25b68, event=0xbfe916d0) at kernel/qwidget.cpp:8394
#19 0xb5c6dfdc in QApplicationPrivate::notify_helper (this=0x9db9c80, receiver=0x9f25b68, e=0xbfe916d0) at kernel/qapplication.cpp:4396
Comment 4 Cristian Oneț 2011-03-20 13:25:13 UTC
*** Bug 266741 has been marked as a duplicate of this bug. ***
Comment 5 Michael T. Garrison Stuber 2011-04-16 21:38:07 UTC
Created attachment 59053 [details]
New crash information added by DrKonqi

I deleted a category, transferring all transactions to a pre-existing category.  When I clicked on the category I had transferred the transactions to, KMM crashed.
Comment 6 Cristian Oneț 2011-04-17 21:00:05 UTC
SVN commit 1228348 by conet:

Notify about balanceChanged only for accounts which have not been deleted. Otherwise an exception will be thrown while accessing the and already deleted account from the cache to emit the balanceChanged signal.

This happens when deleting categories and reassigning transactions to other categories.

Found while trying to reproduce
BUG: 258883

 M  +3 -1      mymoneyfile.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1228348
Comment 7 Cristian Oneț 2011-04-17 21:03:40 UTC
SVN commit 1228349 by conet:

Display the correct account name. The wrong account name was displayed since by the time the error message was displayed d->m_selectedAccount was already set to another account because the view received the objectRemoved signal.

Found while trying to reproduce
BUG: 258883

 M  +12 -7     kmymoney.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1228349
Comment 8 Cristian Oneț 2011-04-17 21:04:34 UTC
Fixed only some related bugs so reopen the report.
Comment 9 Cristian Oneț 2011-04-17 22:20:41 UTC
Could any of the reporters try to see if the can reproduce this bug systematically and then produce an anonymous file (http://kmymoney2.sourceforge.net/kde4/online-manual/details.formats.anonymous.html) on which to reproduce the crash the same way.

I'm asking you to do this because although the bug is pretty well documented (the steps to reproduce it are clearly described, the stack trace is clear) I can't seem to reproduce it no mater how hard I try to follow all the steps. And from the stack trace I can't deduce where things go wrong exactly since an exception is thrown and some function calls are lost until the first catch statement is reached (thus some clues needed to slove this puzzle are lost).
Comment 10 Remco 2011-04-19 08:48:54 UTC
Hey Cristian,

I will try to look into it as soon as possible, I am abroad this week for
work so it will be next week before I am able to do so.

Maybe it helps if I tell you I did an import of my microsoft money file.
After that I imported the data in KMyMoney. This worked well. The I found
out the default categories one could create in his own language. This was
not an option in Microsoft money and with all the financial terms it's would
be much easier for me so I decided to move all transactions from an old
english microsoft money created category to a different category in
KMyMoney. Hope this makes sense and will give you a way to reproduce. If
not, I will sent a anonimised file next week.

grt Remco

On Sun, Apr 17, 2011 at 10:20 PM, Cristian Onet <onet.cristian@gmail.com>wrote:

> https://bugs.kde.org/show_bug.cgi?id=258883
>
>
>
>
>
> --- Comment #9 from Cristian Onet <onet cristian gmail com>  2011-04-17
> 22:20:41 ---
> Could any of the reporters try to see if the can reproduce this bug
> systematically and then produce an anonymous file
> (
> http://kmymoney2.sourceforge.net/kde4/online-manual/details.formats.anonymous.html
> )
> on which to reproduce the crash the same way.
>
> I'm asking you to do this because although the bug is pretty well
> documented
> (the steps to reproduce it are clearly described, the stack trace is clear)
> I
> can't seem to reproduce it no mater how hard I try to follow all the steps.
> And
> from the stack trace I can't deduce where things go wrong exactly since an
> exception is thrown and some function calls are lost until the first catch
> statement is reached (thus some clues needed to slove this puzzle are
> lost).
>
> --
> Configure bugmail: https://bugs.kde.org/userprefs.cgi?tab=email
> ------- You are receiving this mail because: -------
> You are on the CC list for the bug.
>
Comment 11 Thomas Baumgart 2011-05-27 17:19:34 UTC
Does this problem still persist (e.g. in SVN trunk)?
Comment 12 brent 2011-05-27 18:16:50 UTC
Thomas,

No.

Recently I deleted a category that required transfers to another category
without experiencing a crash.

Thanks for your part in creating this useful application.

Brent


On Fri, May 27, 2011 at 8:19 AM, Thomas Baumgart <
ipwizard@users.sourceforge.net> wrote:

> https://bugs.kde.org/show_bug.cgi?id=258883
>
>
> Thomas Baumgart <ipwizard@users.sourceforge.net> changed:
>
>           What    |Removed                     |Added
>
> ----------------------------------------------------------------------------
>            Version|unspecified                 |4.5
>
>
>
>
> --- Comment #11 from Thomas Baumgart <ipwizard users sourceforge net>
>  2011-05-27 17:19:34 ---
> Does this problem still persist (e.g. in SVN trunk)?
>
> --
> Configure bugmail: https://bugs.kde.org/userprefs.cgi?tab=email
> ------- You are receiving this mail because: -------
> You are on the CC list for the bug.
>
Comment 13 Luca 2012-10-11 21:14:18 UTC
Created attachment 74483 [details]
New crash information added by DrKonqi

kmymoney (4.5.3) on KDE Platform 4.6.5 (4.6.5) using Qt 4.7.2

- What I was doing when the application crashed:
Click to go on "compte" after have delete and transfer a category

-- Backtrace (Reduced):
#15 0x08153583 in KGlobalLedgerView::accountSelected (this=0xa22a4d0, _t1=...) at /build/buildd/kmymoney-4.5.3/obj-i686-linux-gnu/kmymoney/views/kgloballedgerview.moc:244
#16 0x0815770f in KGlobalLedgerView::loadView (this=0xa22a4d0) at /build/buildd/kmymoney-4.5.3/kmymoney/views/kgloballedgerview.cpp:343
#17 0x0815e550 in KGlobalLedgerView::showEvent (this=0xa22a4d0, event=0xbf947f80) at /build/buildd/kmymoney-4.5.3/kmymoney/views/kgloballedgerview.cpp:1306
#18 0xb5867262 in QWidget::event (this=0xa22a4d0, event=0xbf947f80) at kernel/qwidget.cpp:8466
#19 0xb580ed24 in QApplicationPrivate::notify_helper (this=0xa086ca0, receiver=0xa22a4d0, e=0xbf947f80) at kernel/qapplication.cpp:4462