Notify about balanceChanged only for accounts which have not been deleted. Otherwise an exception will be thrown while accessing the and already deleted account from the cache to emit the balanceChanged signal.

This happens when deleting categories and reassigning transactions to other categories.

Found while trying to reproduce
BUG: 258883

svn path=/trunk/extragear/office/kmymoney/; revision=1228348